--- a/app/src/main/res/layout/activity_insect_family_list.xml
+++ b/app/src/main/res/layout/activity_insect_family_list.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayoutt xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@color/colorBackground"
     tools:context=".InsectFamilyList" >
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/bugs_list"
@@ -20,5 +14,5 @@
         android:divider="#00000000"/>
 
 
-</RelativeLayoutt>
+</android.support.constraint.ConstraintLayout>
 
