--- a/app/src/main/res/layout/activity_insect_family_list.xml
+++ b/app/src/main/res/layout/activity_insect_family_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:foregroundGravity="center"
         android:layout_centerHorizontal="true"/>
 
     <android.support.v7.widget.RecyclerView
