--- a/app/src/main/res/layout/bugs_layout.xml
+++ b/app/src/main/res/layout/bugs_layout.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginBottom="5dp"
+    android:layout_marginBottom="2dp"
+    android:layout_marginRight="2dp"
+    android:layout_marginLeft="2dp"
     android:id="@+id/card_view">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/insect_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@id/insect_image"
-                android:layout_toRightOf="@id/insect_image"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/insect_image"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_launcher"/>
 
                 <TextView
                     android:id="@+id/insect_name"
@@ -35,7 +30,5 @@
                     android:textSize="20sp" />
 
             </LinearLayout>
-
-        </RelativeLayout>
 
 </android.support.v7.widget.CardView>
