--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,30 +1,14 @@
-<RelativeLayout
-
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/B_search"
-        android:layout_width="32dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="57dp"
-        android:layout_marginTop="40dp"
-        android:onClick="onClick"
-        android:text="n" />
-
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="544dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        tools:context="com.example.priyanka.mapsdemo.MapsActivity" />
+        android:layout_height="match_parent"
+        tools:context=".MapsActivity" />
 
 </RelativeLayout>
