--- a/app/src/main/res/layout/pest_control_layout.xml
+++ b/app/src/main/res/layout/pest_control_layout.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,7 +6,7 @@
     android:layout_marginBottom="2dp"
     android:layout_marginRight="2dp"
     android:layout_marginLeft="2dp"
-    android:id="@+id/card_view">
+    android:id="@+id/pest_card_view">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,20 +14,27 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/insect_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher"/>
-
         <TextView
-            android:id="@+id/insect_name"
+            android:id="@+id/pest_service_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
