--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,131 +4,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bluebackground"
+    android:background="@drawable/uibg"
     tools:context=".SignUp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="193dp"
-        android:layout_height="153dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        app:srcCompat="@drawable/byteme" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="26dp"
-        android:layout_height="30dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginBottom="251dp"
-        app:srcCompat="@drawable/usericon" />
-
-    <EditText
-        android:id="@+id/usernameTextBox"
-        android:layout_width="266dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="42dp"
-        android:layout_marginRight="42dp"
-        android:layout_marginBottom="243dp"
-        android:ems="10"
-        android:hint="User Name"
-        android:inputType="textPersonName" />
+        android:layout_marginTop="0dp" />
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="0dp"
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="26dp"
-        android:layout_height="40dp"
-        android:layout_alignEnd="@+id/imageView2"
+        android:layout_width="137dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="300dp"
+        android:layout_marginLeft="125dp"
+        app:srcCompat="@drawable/bytemelogo" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="208dp"
+        android:gravity="center"
+        android:orientation="horizontal" />
+
+    <LinearLayout
+        android:layout_width="36dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="187dp"
-        app:srcCompat="@drawable/emailicon"
-        android:layout_alignRight="@+id/imageView2" />
+        android:layout_marginStart="57dp"
+        android:layout_marginLeft="57dp"
+        android:layout_marginBottom="197dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/emailTextbox"
-        android:layout_width="266dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/usernameTextBox"
-        android:layout_alignBottom="@+id/imageView4"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="-2dp"
-        android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textPersonName"
-        android:layout_alignLeft="@+id/usernameTextBox"
-        android:layout_marginLeft="1dp" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="20dp"
+            android:layout_height="27dp"
+            android:layout_gravity="center"
+            android:layout_margin="12dp"
+            app:srcCompat="@drawable/usericon" />
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="33dp"
-        android:layout_height="24dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="142dp"
-        android:layout_toStartOf="@+id/usernameTextBox"
-        app:srcCompat="@drawable/passwordicon"
-        android:layout_marginRight="3dp"
-        android:layout_toLeftOf="@+id/usernameTextBox" />
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="20dp"
+            android:layout_height="27dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            app:srcCompat="@drawable/emailicon" />
 
-    <EditText
-        android:id="@+id/passwordTextBox"
-        android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/emailTextbox"
-        android:layout_alignLeft="@+id/emailTextbox"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="128dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPersonName" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="27dp"
+            android:layout_gravity="center"
+            android:layout_margin="14dp"
+            app:srcCompat="@drawable/passwordicon" />
 
-    <Button
-        android:id="@+id/signUpButton"
-        android:layout_width="122dp"
-        android:layout_height="35dp"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
-        android:layout_marginBottom="77dp"
-        android:background="@drawable/signuproundbutton"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="220dp"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/userNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginRight="12dp"
+            android:hint="User Name"
+            android:inputType="textPersonName"
+            android:paddingLeft="5dp"
+            android:textColor="#313b32"
+            android:textColorHint="#869299" />
+
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="12dp"
+            android:hint="Email"
+            android:inputType="textPassword"
+            android:paddingLeft="5dp"
+            android:textColor="#313b32"
+            android:textColorHint="#869299" />
+
+        <EditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="12dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="5dp"
+            android:textColor="#313b32"
+            android:textColorHint="#869299" />
+
+    </LinearLayout>
+
+    <Button
+        android:background="@drawable/roundbtn2"
+        android:layout_height="44dp"
+        android:layout_width="200dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/signUpButton"
+        android:textColor="#000000"
         android:text="Sign Up"
-        android:textColor="#ffff"/>
+        android:layout_marginTop="400dp"/>
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+        android:id="@+id/dontHaveAccountTextView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/emailTextbox"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="49dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="450dp"
+        android:gravity="center"
         android:text="Already have an account?"
-        android:textColor="#000000"
-        android:layout_alignLeft="@+id/emailTextbox"
-        android:layout_marginLeft="5dp" />
+        android:textColor="#000000" />
 
     <Button
-        android:id="@+id/signInButton"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:layout_below="@+id/signUpButton"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="-77dp"
-        android:layout_marginEnd="68dp"
-        android:layout_marginRight="68dp"
         android:background="@android:color/transparent"
-        android:text="Login"
-        android:textColor="#1b9af7" />
+        android:layout_height="36dp"
+        android:layout_width="122dp"
+        android:layout_marginTop="480dp"
+        android:layout_marginLeft="130dp"
+        android:id="@+id/logInButton"
+        android:textColor="#313b32"
+        android:text="LOGIN"/>
 
 </RelativeLayout>
