--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="login">#1b9af7</color>
-    <color name="signup">#ff4351</color>
+    <color name="login">#262626</color>
+    <color name="signup">#ffffff</color>
     <color name="dashboard">#b8d0e3</color>
     <color name="submit">#fa7898</color>
     <color name="colorBackground">#eeeeee</color>
